--- a/css/styles.css
+++ b/css/styles.css
@@ -1051,3 +1051,19 @@ body, p, .paper-abstract, #about p {
         box-sizing: border-box;
     }
 }
+
+.resource-description ul {
+    list-style-type: disc;
+    padding-left: 2em;
+    margin-top: 0.5em;
+}
+
+.resource-description ul li {
+    margin-bottom: 0.3em;
+    color: #666666;
+}
+
+/* Dark mode styles for the nested list */
+[data-theme="dark"] .resource-description ul li {
+    color: #ffffff;
+}
